[package]
name = "neptune_intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
injective-cosmwasm = "0.2.21"
injective-std = "0.1.5"
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
tokio = "1.36.0"
